# routes/api.php
@@ -20,5 +20,5 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
 
 
 Route::group(['prefix' => 'v1'], function () {
-    Route::resource('categorias', 'V1\CategoriaAPIController');
+    Route::apiResource('categorias', 'V1\CategoriaAPIController');
 });
